[package]
name = "mrkle"
version = "0.0.1-rc-0"
edition = "2024"
description = "A simple and performant Merkle Tree implementation in Rust, with support for building trees and verifying inclusion proofs."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/LVivona/mrkle"
keywords = ["hash", "merkle", "proof", "tree"]

[dependencies]
faster-hex = { workspace = true }
crypto = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
text_trees = { workspace = true }
hashbrown = { workspace = true }


[dev-dependencies]
sha1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }

[features]
default = ["std"]
std = ["thiserror/std"]
alloc = []
serde = ["serde/alloc"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs/katex.html"]
