[package]
name = "mrkle_py"
version = "0.0.1"
edition = "2021"

[lib]
name = "mrkle_rs"
crate-type = ["cdylib"]

[dependencies]
mrkle = { path = "..", default-features = false, features = ["std", "serde"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
pyo3 = { version = "0.24", features = [
    'abi3',
    'abi3-py38',
    "extension-module",
] }
