[package]
name = "mrkle_py"
version = "0.0.1"
edition = "2021"

[lib]
name = "mrkle_rs"
crate-type = ["cdylib"]

[dependencies]
mrkle = { path = "../../mrkle", default-features = false, features = ["std", "serde"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
pyo3 = { version = "0.24", features = [
    'abi3',
    'abi3-py38',
    "extension-module",
] }
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"
blake2 = "0.10.6"
crypto = { version = "0.5.1", default-features = false, features = ["digest"] }
hex = "0.4.3"
