[package]
name = "mrkle_py"
version = "0.0.1"
edition = "2021"

[lib]
name = "mrkle_rs"
crate-type = ["cdylib"]

[dependencies]
mrkle = { path = "../../mrkle", default-features = false, features = ["std", "serde"] }
hex = "0.4.3"
pyo3-file = "0.14.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
bincode = { workspace = true }


pyo3 = { workspace = true }

sha1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake2 = { workspace = true }
crypto = { workspace = true }
