[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "mrkle"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dynamic = ["version"]
authors = [
    {name = 'Luca Vivona', email = "lucavivona01@gmail.com"}
]

[project.optional-dependencies]
quality = [
    "black==22.3",
    "click==8.0.4",
    "isort>=5.5.4",
    "flake8>=3.8.3",
]
testing = [
    "setuptools_rust>=1.5.2",
    "pytest>=7.2.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.70.2",
]
dev = [
    "mrkle[quality]",
    "mrkle[testing]"
]

[project.urls]
Homepage = 'https://github.com/LVivona/mrkle'
Source = 'https://github.com/LVivona/mrkle'
repository = "https://github.com/LVivona/mrkle"

[tool.maturin]
python-source = "py"
module-name = "mrkle._mrkle_rs"
bindings = 'pyo3'
features = ["pyo3/extension-module"]
